Minor bug fixes ready to merge

--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -31,7 +31,7 @@
             <a class="adjust" href="#" rv-data-cart-remove="index | plus 1">&times;</a>
           </div>
         </div>
-        <div class="column l2 m2 s6 right">
+        <div class="column l2 m2 s6 right" rv-cloak>
           { item.line_price | money_with_currency }
         </div>
       </div>
