--- a/assets/app.js.liquid
+++ b/assets/app.js.liquid
@@ -175,6 +175,7 @@ concrete.productImageSwitch = function () {
     });
   }
 };
+
 concrete.switchImage = function (src, imgObject, el) {
   // Make sure element is a jquery object
   var $el = $(el);
@@ -206,6 +207,7 @@ concrete.switchVariant = function(options) {
       $addToCart.removeClass("disabled").prop('disabled', false);
       $addToCartText.html({{ 'product.add_to_cart' | t | json }});
       $addToCart.attr("data-cart-add", variant.id);
+      $("#Quantity").attr('max', variant.inventory_quantity);
     } else {
       $addToCart.addClass("disabled").prop('disabled', true);
       $addToCartText.html({{ 'product.add_to_cart_unavailable' | t | json }});
