--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -69,7 +69,7 @@
   </div>
 
   {% include 'popup-cart' %}
-
+  {% include 'popup-error' %}
 
   {% comment %}{{ 'cookies.min.js' | asset_url | script_tag }}{% endcomment %}
   {{ 'rivets.min.js' | asset_url | script_tag }}
@@ -85,11 +85,16 @@
     // Cart error handling
     CartJS.errorHandling.cartError = function(error) {
       // Event handling goes here
-      console.log("CART ERROR: ", error);
+      $("#errorMessage").html(error.description);
     }
-    $(document).on('cart.requestComplete', function(event, cart) {
+
+    $(document).on('cart.requestComplete', function(event, cart, error) {
       {% unless template == 'cart' %}
+      if (error) {
+        $("#ErrorPopup").addClass('visible');
+      } else {
         $('#PopupCart.popup').addClass('visible');
+      }
       {% endunless %}
     });
   </script>
