Global variables and compare at price

--- a/assets/app.js.liquid
+++ b/assets/app.js.liquid
@@ -79,7 +79,12 @@ concrete.cacheSelectors = function () {
     $hideRecoverPasswordLink : $('#HideRecoverPasswordLink'),
     $recoverPasswordForm : $('#RecoverPasswordForm'),
     $customerLoginForm : $('#LoginForm'),
-    $passwordResetSuccess : $('#ResetSuccess')
+    $passwordResetSuccess : $('#ResetSuccess'),
+    $addToCart: $("#AddToCart"),
+    $addToCartText: $("#AddToCartText"),
+    $productPrice: $("#ProductPrice"),
+    $comparePrice: $("#ComparePrice"),
+    $onSale: $("#OnSale"),
   };
 };
 
