--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -66,7 +66,7 @@
             <p id="OnSale">
               <span class="hidden">{{ 'product.original_price' | t }}</span>
               <span>{{ 'product.original_price' | t }}</span>
-              <s>{{ product.compare_at_price | money }}</s>
+              <s id="ComparePrice">{{ product.compare_at_price | money }}</s>
             </p>
           {% endif %}
 
