=Changes to typography added smooth scroll, added favicon and containers.md

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,8 +21,10 @@
 
   <title>{{ site.title }}</title>
   <link href="{{ site.github.url }}/assets/main.css" rel="stylesheet" type="text/css" media="all">
+  <link rel="shortcut icon" href="{{ site.github.url }}/assets/favicon.png" type="image/png" />
   <!-- <link rel="shortcut icon" href="{{ 'favicon.png' | asset_url }}" type="image/png" /> -->
 
   <!-- Fonts and CDN content ================================================== -->
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:200,400,500,600" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600" rel="stylesheet">
+  <script src="{{ site.github.url }}/assets/js/smooth-scroll.js"></script>
 </head>
