--- a/_includes/content.html
+++ b/_includes/content.html
@@ -1,20 +1,40 @@
 <main>
   <aside class="sidebar column l3 s-hide">
     <h3>Contents</h3>
-    <h4>Getting Started</h4>
-    <ul>
-      {% for item in site.docs %}
-        {% if item.category == 'Getting Started' %}
-          <li><a href="#{{ item.handle }}">{{ item.title }}</a></li>
-        {% endif %}
-      {% endfor %}
-    </ul>
+
+      <h4><a data-scroll href="#getting-started">Getting Started</a></h4>
+      <ul>
+        {% for item in site.docs %}
+          {% if item.category == 'Getting Started' %}
+            <li><a data-scroll href="#{{ item.handle }}">{{ item.title }}</a></li>
+          {% endif %}
+        {% endfor %}
+      </ul>
+
+      <h4><a data-scroll href="#the-grid">The Grid</a></h4>
+      <ul>
+        {% for item in site.docs %}
+          {% if item.category == 'The Grid' %}
+            <li><a data-scroll href="#{{ item.handle }}">{{ item.title }}</a></li>
+          {% endif %}
+        {% endfor %}
+      </ul>
+
   </aside>
+
   <div class="column l9 s12">
     <div class="documentation">
-      <h2>Getting Started</h2>
+      <h2 id="getting-started">Getting Started</h2>
       {% for item in site.docs %}
         {% if item.category == 'Getting Started' %}
+          <h3 id="{{ item.handle }}">{{ item.title }}</h3>
+          {{ item.content }}
+        {% endif %}
+      {% endfor %}
+
+      <h2 id="the-grid">The Grid</h2>
+      {% for item in site.docs %}
+        {% if item.category == 'The Grid' %}
           <h3 id="{{ item.handle }}">{{ item.title }}</h3>
           {{ item.content }}
         {% endif %}
