--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <h1>{{ site.data.site.name }}</h1>
     <h2>{{ site.data.site.subtitle }}</h2>
     <a class="button" href="https://github.com/Elkfox/Concrete/archive/master.zip">Download</a>
-    <p><a href="https://github.com/Elkfox/Concrete/">View Source on GitHub</a> • <a href="https://concrete-theme.myshopify.com/">View Demo Store</a></p>
+    <p><a href="https://github.com/Elkfox/Concrete/" target="_blank" rel="nofollow">View Source on GitHub</a> • <a href="https://concrete-theme.myshopify.com/"  target="_blank" rel="nofollow">View Demo Store</a></p>
   </div>
   <div class="triangle"></div>
 </header>
