--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,4 +27,7 @@
   <!-- Fonts and CDN content ================================================== -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600" rel="stylesheet">
   <script src="{{ site.github.url }}/assets/js/smooth-scroll.js"></script>
+  <script src="{{ site.github.url }}/assets/js/scroll-spy.js"></script>
+  <script src="{{ site.github.url }}/assets/js/prism.js"></script>
 </head>
+<body data-spy="scroll" data-target="#navbar-example">
