--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -27,7 +27,7 @@ html {
 body {
   height: 100%;
   color: $colorText;
-  background-color: $colorBackground;
+  background-color: $colorGrey;
   font: 16px/21px sans-serif;
   -webkit-font-smoothing: antialiased;
 }
