--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -115,7 +115,7 @@ aside.sidebar {
     margin-bottom: $gutter / 2;
   }
 }
-article.documentation {
+.documentation {
   h2 {
     font-weight: $fontBold;
     color: $colorText;
