--- a/assets/main.scss
+++ b/assets/main.scss
@@ -179,6 +179,8 @@ $transition: all .3s ease-out;
 @import "helpers";
 @import "grid";
 @import "typography";
+@import "navigation";
 @import "form";
-@import "additions";
 @import "syntax";
+@import "navigation";
+@import "additions";
